salti/src/ui/snapshots/salti__ui__render__tests__translated.snap
---
source: salti/src/ui/render.rs
expression: "render_text(Some(&session), &ui_state())"
---
                     File: test.fasta | Status: Loaded | 2 alignments | Length: 18 | Positions: 1-18
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│                  │1       10                                                                     │
│                  │.   .    |    .                                                                │
│2 seq2            │ .  .  D  .  .  .                                                              │
│3 seq3            │ .  .  .  .  D  .                                                              │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
│                  │                                                                               │
├──────────────────┼───────────────────────────────────────────────────────────────────────────────┤
│Reference Sequence│ H  H  H  H  H  H                                                              │
│Consensus Sequence│ H  H  D  H  D  H                                                              │
│Conservation:     │██████▆▆▆███▆▆▆███                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
                                                                                Translation frame: 1
